akka-javasdk-annotation-processor-tests/component-validation-descriptors/src/test/resources/test-sources/valid/PrivateHandlersESSubscriptionInConsumer.java
package com.example;

import akka.javasdk.annotations.Component;
import akka.javasdk.annotations.Consume;
import akka.javasdk.consumer.Consumer;

@Component(id = "consumer-ambiguous-es")
@Consume.FromEventSourcedEntity(SimpleEventSourcedEntity.class)
public class PrivateHandlersESSubscriptionInConsumer extends Consumer {

  public Effect onEvent(SimpleEventSourcedEntity.CounterEvent message) {
    return effects().produce(message);
  }

  Effect onEvent(Integer message) {
    return effects().produce(message);
  }
}
